[package]
name = "imgen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread", "fs"] }
indicatif = "0.17.8"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8.5"
futures = "0.3.30"
