[package]
name = "imgen"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

description = "A cli wrapper around OpenAI imgage generation that works for me."
license = "MIT OR Apache-2.0"
repository = "https://github.com/kloki/imgen"
[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread", "fs"] }
indicatif = "0.17.8"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8.5"
futures = "0.3.30"
